(lang dune 3.19)

(name h42n42)

(generate_opam_files true)

(source
 (github znichola/h42n42))

(authors "Nicholas Zivkovic <author@example.com>")

(maintainers "Nicholas Zivkovic <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name h42n42)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("42 Nice" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
